--- a/index.html
+++ b/index.html
@@ -8,16 +8,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>
-        <h3>Страсбург является столицей Рождества!</h3>
-        <div class="image_container">
-            <img src="./img/cat.png" alt="">
-    </div>
-    <div class="edit"></div>
-    <p>Город-граница</p>
-    <p>Город-космополит</p>
-    <p>Город-перекресток</p>
-            
-    
+   <div>nello</div>
+   <a href="https://www.litres.ru">LITRES</a>
+   <img src="./img/hous.png">
 </body>
 </html>
