--- a/HW-Lesson4/index.html
+++ b/HW-Lesson4/index.html
@@ -9,7 +9,7 @@
 <body><div class="box">
     <h3 class="title">The Best Price</h3>
     <div class="image-box">
-        <img src="./img/Heart.png">
+        <img src="./img/housе15.png">
     </div>
     <div class="posts"></div>
     <div class="posts__item">
@@ -23,9 +23,7 @@
     </div>
     <div class="container">
         <h1>Курс валют</h1>
-      <div>
-        <img src="./usa.png" alt="">
-      </div>
+      
       <div class="money"></div>
       <div class="money__item"></div>
       <p>€EUR-Евро(Страны Евросоюза)</p>
@@ -36,17 +34,17 @@
       </div>
 
     <table class="table">
-    </body>
+    </tbody>
     <tr>
         <td> Флаг</td>
         <td> Валюта </td>
         <td> Курс </td>
       </tr>
-      <tr class="Picture">
-        <td class="Picture"> 
+      <tr class="picture">
+        <td class="picture">
             <img  src="./img/USA.png">
             <img src="./img/Europe.png">
-        </td>
+      
         <td> $USD/€EUR </td>
         <td> 0,93€ </td>
       </tr>
@@ -75,6 +73,6 @@
         </tr>
     </tbody>
 </table>
-
+</div> 
 </body>
 </html>
